<resources>
    <string name="app_name">Bolg</string>
    <string name="game_play">GamePlay</string>
    <string name="game_rule">GameRule</string>
    <string name="billing_bullet">課金弾(ON/OFF)</string>
    <string name="billing_bullet_count">課金弾数：１０</string>
    <string name="create_room">部屋作成</string>
    <string name="join_room">部屋参加</string>
    <string name="input_room_id">ルームIDの入力</string>
    <string name="join">参加</string>
    <string name="create">作成</string>
    <string name="item">アイテム(ON/OFF)</string>
    <string name="inventory">インベントリ</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="dummy">ダミー</string>
    <string name="user_id">ユーザーID</string>
    <string name="pairing">ペアリング</string>
    <string name="standby_ok">準備完了</string>
    <string name="user">ユーザー</string>

    <string-array name="planets_array">
        <item>殲滅戦</item>
        <item>チーム戦</item>
        <item>○○戦</item>
    </string-array>

    <string name="getBtAdapter">Get BluetoothAdapter</string>
    <string name="notGetBtAdapter">Can not get BluetoothAdapter</string>
    <string name="notPaired">Not paired</string>
    <string name="btConnecting">Bluetooth connecting</string>
    <string name="btConnect">Bluetooth connect</string>
    <string name="btDisconnect">Bluetooth disconnect</string>
    <string name="sutamna">stamina</string>
    <string name="_1">アイテム1</string>
    <string name="_2">アイテム2</string>
    <string name="_3">アイテム3</string>
    <string name="survival">殲滅戦</string>
    <string name="billingAmmunition">課金弾</string>
    <string name="item_txt">アイテム</string>
    <string name="todo">TODO</string>
    <string name="timer">99:99:99</string>
    <string name="hit_point">100</string>
    <string name="remaining_ammo">残弾数</string>
    <string name="log">Log受信中…</string>

    <string name="winner">Winner</string>
    <string name="loser">Loser</string>
</resources>
