<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".standby.player.PlayerStandbyActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/player_standby_recycler_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/player_join_text"
        app:layout_constraintEnd_toStartOf="@+id/player_select_table"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player_join_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/player_standby_recycler_view"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TableLayout
        android:id="@+id/player_select_table"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/player_standby_recycler_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157">

        <TableRow
            android:id="@+id/row"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/player_pairing_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:src="@drawable/ic_settings_bluetooth_black_24dp"
                android:text="@string/pairing" />

            <TextView
                android:id="@+id/player_user_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:textSize="20sp"
                android:gravity="center"
                android:text="@string/user_id" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/player_rule"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="4"
                android:gravity="center"
                android:textSize="20sp"
                android:background="@drawable/frame_black"
                android:text="ルール(HOST選択反映)" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/player_kakin_bullet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:gravity="center"
                android:textSize="15sp"
                android:layout_margin="2dp"
                android:background="@drawable/frame_black"
                android:text="課金弾(HOST選択反映)" />

            <TextView
                android:id="@+id/btn_8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:gravity="center"
                android:textSize="15sp"
                android:layout_margin="2dp"
                android:background="@drawable/frame_black"
                android:text="Item(HOST選択反映)" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/btn_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_margin="2dp"
                android:background="@drawable/frame_black"
                android:text="アイテム(インベントリ)" />

            <TextView
                android:id="@+id/btn_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_margin="2dp"
                android:background="@drawable/frame_black"
                android:text="アイテム(インベントリ)" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRowd"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/player_kakin_bullet_count"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_margin="2dp"
                android:background="@drawable/frame_black"
                android:text="@string/billing_bullet_count" />
            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="準備完了：2/10"
                android:textSize="15sp"
                android:layout_margin="2dp"
                android:background="@drawable/frame_black"
                android:layout_span="2" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRowp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/player_inventory_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:text="@string/inventory" />

            <Button
                android:id="@+id/player_ready_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:text="@string/standby_ok" />
        </TableRow>

        <TableRow
            android:id="@+id/dummyTableRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/dummy1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:text="@string/dummy" />
            <Button
                android:id="@+id/dummy2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:text="@string/dummy" />
            <Button
                android:id="@+id/dummy3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:text="@string/dummy" />
            <Button
                android:id="@+id/dummy4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:text="@string/dummy" />
        </TableRow>

    </TableLayout>

    <ProgressBar
        android:id="@+id/player_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>