<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:background="@drawable/frame_black"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent" />
    <ImageView
        android:id="@+id/bullet_kind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bolg_change_ammunition"
        android:contentDescription="@string/todo"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/list"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/bullet_kind"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/bolg_timer"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/timer"
        app:layout_constraintTop_toTopOf="@id/timer"
        android:text="@string/timer"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"
        />

    <ImageView
        android:id="@+id/item1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/list"
        app:layout_constraintTop_toBottomOf="@+id/bullet_kind"
        android:src="@drawable/bplg_item"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/item2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/item1"
        app:layout_constraintTop_toBottomOf="@+id/bullet_kind"
        android:src="@drawable/bplg_item"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/item2"
        app:layout_constraintTop_toBottomOf="@+id/timer"
        android:src="@drawable/bolg_log"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/hit_point_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/list"
        app:layout_constraintTop_toBottomOf="@+id/item1"
        android:src="@drawable/bolg_hitpoint_blue"
        android:contentDescription="@string/todo"
        android:layout_marginStart="10dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/hp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/hit_point_img"
        app:layout_constraintTop_toTopOf="@+id/hit_point_img"
        android:layout_marginTop="60dp"
        android:layout_marginStart="100dp"
        android:text="@string/hit_point"
        android:textSize="30sp"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/bullet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/hit_point_img"
        app:layout_constraintTop_toBottomOf="@+id/log"
        android:src="@drawable/bolg_bullet_nomal"
        android:contentDescription="@string/todo"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/bullet"
        app:layout_constraintTop_toTopOf="@+id/bullet"
        android:text="∞"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="100dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>