<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bolg_background_img"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/host_toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/header"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="20dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/host_standby_recycler_view"
        android:layout_width="400dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/frame_black"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/host_join_num_txt"
        app:layout_constraintTop_toBottomOf="@+id/host_toolbar"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/host_join_num_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="参加人数"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/host_standby_recycler_view"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="12dp"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/host_join_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/host_join_num_txt"
        app:layout_constraintStart_toEndOf="@+id/host_join_num_txt"
        android:layout_marginStart="30dp"
        android:textSize="30sp"/>
    <ImageView
        android:id="@+id/host_bluetooth_enable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@+id/host_game_rule_spinner"
        app:layout_constraintStart_toEndOf="@+id/host_standby_recycler_view"
        app:layout_constraintTop_toBottomOf="@+id/host_toolbar"
        app:srcCompat="@drawable/bolg_bluetooth_enable_dark"
        android:text="@string/pairing" />

    <ImageButton
        android:id="@+id/host_pairing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_margin="10dp"
        android:text="@string/pairing"
        app:layout_constraintBottom_toTopOf="@+id/host_game_rule_spinner"
        app:layout_constraintStart_toEndOf="@+id/host_bluetooth_enable"
        app:layout_constraintTop_toBottomOf="@+id/host_toolbar"
        app:srcCompat="@drawable/bolg_bluetooth_state" />

    <TextView
        android:id="@+id/host_user_id"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:background="@drawable/frame_black"
        android:gravity="center"
        android:text="UserID"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/host_game_rule_spinner"
        app:layout_constraintStart_toEndOf="@+id/host_pairing"
        app:layout_constraintStart_toStartOf="@+id/host_start_btn"
        app:layout_constraintTop_toBottomOf="@+id/host_toolbar" />

    <Spinner
        android:id="@+id/host_game_rule_spinner"
        android:layout_width="530dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/frame_black"
        app:layout_constraintBottom_toTopOf="@+id/host_item_txt"
        app:layout_constraintStart_toEndOf="@+id/host_standby_recycler_view" />

        <TextView
            android:id="@+id/billingAmmunition_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="bottom"
            app:layout_constraintStart_toEndOf="@+id/host_standby_recycler_view"
            app:layout_constraintBottom_toTopOf="@+id/host_billing_ammunition_btn"
            android:text="@string/billingAmmunition"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/host_item_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/billingAmmunition_text"
            app:layout_constraintStart_toStartOf="@+id/host_item_btn"
            app:layout_constraintBottom_toTopOf="@+id/host_item_btn"
            android:text="@string/item_txt"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <ImageButton
            android:id="@+id/host_billing_ammunition_btn"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            app:layout_constraintStart_toEndOf="@+id/host_standby_recycler_view"
            app:layout_constraintBottom_toTopOf="@+id/host_select_item1"
            android:background="@null"
            android:elevation="20dp"
            app:srcCompat="@drawable/bolg_button_off_dark" />

        <ImageButton
            android:id="@+id/host_item_btn"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            app:layout_constraintStart_toEndOf="@+id/host_billing_ammunition_btn"
            app:layout_constraintStart_toStartOf="@+id/host_start_btn"
            app:layout_constraintBottom_toTopOf="@+id/host_select_item1"
            android:background="@null"
            android:elevation="20dp"
            app:srcCompat="@drawable/bolg_button_off_dark" />


        <TextView
            android:id="@+id/host_select_item1"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/host_standby_recycler_view"
            app:layout_constraintBottom_toTopOf="@+id/ready_title_txt"
            android:background="@drawable/frame_black"
            android:gravity="center"
            android:text="アイテム1"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/host_select_item2"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/host_billing_ammunition_txt"
            app:layout_constraintStart_toStartOf="@+id/host_start_btn"
            app:layout_constraintBottom_toTopOf="@+id/ready_title_txt"
            android:background="@drawable/frame_black"
            android:gravity="center"
            android:text="アイテム2"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="2dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="30sp" />


        <TextView
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/frame_black"
            app:layout_constraintStart_toEndOf="@+id/ready_title_txt"
            app:layout_constraintStart_toStartOf="@+id/host_start_btn"
            app:layout_constraintBottom_toTopOf="@+id/host_inventory_btn"
            android:gravity="center"
            android:text="課金弾"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/host_billing_ammunition_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/frame_black"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="@+id/host_start_btn"
            app:layout_constraintStart_toEndOf="@+id/host_select_item2"
            app:layout_constraintBottom_toTopOf="@+id/host_inventory_btn" android:text="0"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="35sp" />

    <TextView
        android:id="@+id/ready_title_txt"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/frame_black"
        android:gravity="center"
        android:text="準備完了"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/host_inventory_btn"
        app:layout_constraintStart_toEndOf="@+id/host_standby_recycler_view"
        app:layout_constraintStart_toStartOf="@+id/host_inventory_btn" />

    <TextView
        android:id="@+id/host_ready_txt"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
         android:layout_marginStart="10dp"
        android:background="@drawable/frame_black"
        android:gravity="center"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/host_select_item1"
        app:layout_constraintBottom_toTopOf="@+id/host_inventory_btn" />

    <ImageButton
        android:id="@+id/host_inventory_btn"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/host_standby_recycler_view"
        app:layout_constraintBottom_toTopOf="@+id/host_join_num_txt"
        android:background="@null"
        app:srcCompat="@drawable/bolg_inventory_on_dark" />

        <ImageButton
            android:id="@+id/host_start_btn"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/host_inventory_btn"
            app:layout_constraintBottom_toTopOf="@+id/host_join_num_txt"
            android:background="@null"
            app:srcCompat="@drawable/bolg_start_on_dark" />

    <ProgressBar
        android:id="@+id/host_pairing_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminate="true"
        android:indeterminateTintMode="src_in"
        android:indeterminateTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>
